# ai-config-sync

./: .gitignore  README.md  claude-global-prompt.md  codex-global-prompt.md  opencode-global-prompt.md  pi-global-prompt.md  pyproject.toml  shared-ai-config.json  shared-global-prompt.md  toolchain.lock.json  update-all-clients.sh  update-all-mcp.sh
.serena/: project.yml
.serena/memories/: conventions.md  core.md  suggested_commands.md  task_completion.md  tech_stack.md
docs/: README.md  browser-dashboard-validation-checklist.md
docs/shared/: agent-integration.md  sync-scope.md
prompts/: README.md  claude-global-prompt.md  codex-global-prompt.md  opencode-global-prompt.md  pi-global-prompt.md  shared-global-prompt.md
scripts/claude/: ensure-vscode-wrapper.sh  update-claude.sh
scripts/codex/: update-codex.sh
scripts/mcp/: update-codegraph.sh  update-fetch.sh  update-node-repl-linux.sh  update-serena-agent.sh
scripts/opencode/: update-opencode.sh
scripts/paseo/: update-paseo.sh
scripts/pi/: update-pi.sh
scripts/pi-web/: update-pi-web.sh
skills/: README.md
skills/architecture-deepening/: SKILL.md
skills/aspnet-modular-autofac/: SKILL.md
skills/clarify-with-repo-context/: SKILL.md
skills/code-maintainability/: SKILL.md
skills/code-review/: SKILL.md
skills/codex/: README.md
skills/codex-subagent/: SKILL.md
skills/core-web-vitals/: SKILL.md
tests/: test_mcp_runtime.py  test_opencode_manager.py  test_pi_manager.py  test_pi_package_manager.py  test_pi_web_manager.py  test_sync.py  test_ui_ux_pro_max_search.py  test_web_server.py
(+164 files in other folders)
