[project]
name = "ai-config-sync"
version = "0.1.0"
description = "Shared MCP and skill sync for Codex, Claude Code, and OpenCode"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "psutil>=6.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[dependency-groups]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
ai-config-sync = "ai_config_sync.cli:main"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
